crates/etas_tests/fixtures/compiler/projects/negative/raw_https_import/src/app/main.es
module app.main;

import "https://github.com:443/org/package";

flow main(args: Array<string>) -> i32 ![]
{
    return 0;
}
